[B][COLOR gold]v4.03.04[/COLOR][/B]
- Code cleanup
- Minor cosmetic fix

[B][COLOR gold]v4.03.03[/COLOR][/B]
- Added People category on main menu (and removed from Movies menu). Opens
  select dialog with options Movies/TV Shows/Biography
- Added saving of people searches
- Removed "Hide movies in cinema" setting/ability. Redundant as releases
  on streaming platforms are usually instantly available, and unreleased titles
  are labelled accordingly
- Better platform detection

[B][COLOR gold]v4.03.02[/COLOR][/B]
- Made some changes to the magnet cached status check function to hopefully
  prevent it from locking the scraping process when a debrid service is down

[B][COLOR gold]v4.03.00-1[/COLOR][/B]
- Cosmetic updates
- Default trailer search method changed to IMDb, as it doesn't require the
  YouTube add-on (and all the burden it carries). One drawback is that it
  doesn't supply season/episode specific related videos

[B][COLOR gold]v4.02.05[/COLOR][/B]
- Added yet another trailer/related videos source to choose: IMDb
  This source does not require the YouTube add-on to work

[B][COLOR gold]v4.02.04[/COLOR][/B]
- Fixed clearing movies saved search terms through search menu clearing out
  tvshows' too (and vice-versa). Action through tools menu still clears all.
- Other minor fixes

[B][COLOR gold]v4.02.03[/COLOR][/B]
- Internal changes to hopefully make things a bit faster
- TV calendar/New episodes loading fix and caching fix
- Minor compatibility adjustment for... spmc (lol)

[B][COLOR gold]v4.02.02[/COLOR][/B]
- Added biography info on 'Cast' context menu action

[B][COLOR gold]v4.02.01[/COLOR][/B]
- Channels fix
- Fixed some issues with Trakt (hopefully)

[B][COLOR gold]v4.02.00[/COLOR][/B]
- Added new "Cast" context menu item, which can list
  all the movies & shows an actor has appeared in
- Fixed issue with "Play random"
- Altered "Find similar" context menu's source from Trakt to TMDb
- Updated debrid hosts list
- Fixed some issues with caching on py3
