@@ -64,7 +64,7 @@
         <!--<setting id="cf.disable" type="bool" label="32362" default="false" />-->
         <setting id="remove.dups" type="bool" label="32090" default="true" />
         <setting id="check.torr.cache" type="bool" label="32114" default="true" />
-        <setting id="remove.uncached" type="bool" label="32126" default="false" enable="eq(-1,true)" subsetting="true" />
+        <setting id="remove.uncached" type="bool" label="32126" default="true" enable="eq(-1,true)" subsetting="true" />
         <setting id="debrid.text" type="text" label="32115" enable="false" subsetting="true" />
         <setting type="lsep" label="32142" />
         <setting id="main.sort" type="enum" label="32143" lvalues="32144|32145" default="1" />
